# system-tools

./: README.adoc  justfile
ambulances/disk/: README.adoc
ambulances/network/: 0-AI-MANIFEST.a2ml  BUILD_ADA.md  BUILD_D.md  BUILD_TAURI.md  CHANGELOG.adoc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  MAINTAINERS.md  MINIX_BUILD.md  README.adoc  ROADMAP.adoc  RSR-COMPLIANCE.md  SECURITY.md  TPCF.md  deno.json  dub.json  index.html  install.sh  network-repair  network_ambulance_tui.gpr  rescript.json  vite.config.js
ambulances/network/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ambulances/network/src-tauri/src/: lib.rs  main.rs
ambulances/performance/: 0-AI-MANIFEST.a2ml  README.adoc
ambulances/security/: README.adoc
contracts/: 0-AI-MANIFEST.a2ml
ffi/systemd/: build.zig
ffi/systemd/shim/: Cargo.toml
ffi/systemd/shim/src/: lib.rs
monitoring/flare/: 0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc
monitoring/observatory/: .gitignore  0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc  ROADMAP.adoc  mix.exs
monitoring/systems-observatory/: .editorconfig  .gitlab-ci.yml  0-AI-MANIFEST.a2ml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  MAINTAINERS.md  PROJECT_SUMMARY.md  Project.toml  QUICKSTART.md  README.adoc  SECURITY.md  TPCF.md  TUTORIAL.md  justfile
recovery/emergency-room/: 0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.adoc  README.adoc  ROADMAP.adoc  v.mod
recovery/freeze-ejector/: 0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  (+2 more)
(+224 files in other folders)
