# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "network-ambulance"
version = "1.1.0"
description = "Network diagnostics and repair tool"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "network_ambulance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "network-ambulance"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [
    "macos-private-api",
    "linux-ipc-protocol",
    "tray-icon",
    "shell-open-api"
] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
